# Pocket-Munnin

./: CMakeLists.txt  pocketMunnin.pro  pocket_munnin.qbs  qtBaseTemplate.pri
app/: CMakeLists.txt  main.cpp  pocket_munnin.qrc
app/resource/: resource.qrc
app_pocketMunnin/: CMakeLists.txt  application.pro  application.qbs  main.cpp
plug_currencyHandler/: CMakeLists.txt  currencyHandlerLib.qbs  plug_currencyHandler.qbs
plug_todoList/: todoListLib.qbs
plug_trinn/: CMakeLists.txt  plug_trinn.qbs  trinnLib.qbs
plug_trinn/gui/: main.qml
plug_trinn/include/: crypt.h  id.h  trinn.h  trinnEnum.h
plug_trinn/include/login/: crypt_Copy.h  loginDatas.h  me.h
plug_trinn/include/old/: dataHandler.h  listTemplate.h  moneyAccounting.h
plug_trinn/include/subject/: bankCard.h  object.h  subject.h
plug_trinn/include/transaction/: baseTransaction.h  income.h  magnet.h  plan.h  spend.h  transfer.h
plug_trinn/include/type/: base.h  category.h  project.h
plug_trinn/src/: crypt.cpp  id.cpp  trinn.cpp
plug_trinn/src/login/: loginDatas.cpp  me.cpp
plug_trinn/src/old/: dataHandler.cpp  moneyAccounting.cpp
plug_trinn/src/subject/: bankCard.cpp  object.cpp  subject.cpp
plug_trinn/src/transaction/: baseTransaction.cpp  income.cpp  magnet.cpp  plan.cpp  spend.cpp  transfer.cpp
plug_trinn/src/type/: base.cpp  category.cpp
sub_todo_list/: CMakeLists.txt  metadata.json  plug_todoList.qbs
sub_trinn/: CMakeLists.txt
sub_trinn/gui_trinn/: CMakeLists.txt  trinn.cpp  trinn_rc.qrc
sub_trinn/gui_trinn/include/: TrinnGui
sub_trinn/gui_trinn/include/gui_trinn/: trinn.h
sub_trinn/gui_trinn/trinn/data/: TransactionList.qml
sub_trinn/gui_trinn/trinn/main/: TrinnMain.qml
sub_trinn/lib_trinn/: CMakeLists.txt  trinnEnum.cpp  trinnStorage.cpp
sub_trinn/lib_trinn/include/: TrinnLib  trinnLib.h
sub_trinn/lib_trinn/include/Trinn/: Enum  Storage
sub_trinn/lib_trinn/include/Trinn/Management/: Budgate  Plan
sub_trinn/lib_trinn/include/Trinn/Model/: Management  Subject  Transaction
sub_trinn/lib_trinn/include/Trinn/Subject/: Account  Category  Project  Store
sub_trinn/lib_trinn/include/Trinn/Transaction/: Base  Income  Magnet  Purchase  Transfer
sub_trinn/lib_trinn/include/lib_trinn/: trinnEnum.h  trinnStorage.h
sub_trinn/lib_trinn/include/lib_trinn/management/: budgate.h  plan.h
sub_trinn/lib_trinn/include/lib_trinn/model/: management.h  subject.h  transaction.h
sub_trinn/lib_trinn/include/lib_trinn/subject/: account.h  category.h  project.h  store.h
sub_trinn/lib_trinn/include/lib_trinn/transaction/: income.h  magnet.h  purchase.h  transfer.h
sub_trinn/lib_trinn/management/: budgate.cpp  plan.cpp
sub_trinn/lib_trinn/model/: management.cpp  subject.cpp  transaction.cpp
sub_trinn/lib_trinn/subject/: account.cpp  category.cpp  project.cpp  store.cpp
sub_trinn/lib_trinn/transaction/: income.cpp  magnet.cpp  purchase.cpp  transfer.cpp
sub_trinn/web_trinn/: CMakeLists.txt
